default/objects/BR_filter__c/BR_filter__c.object-meta.xml
<CustomObject>
    <description>filter settings for business regulations check</description>
    <label>BR filter</label>
    <nameField>
        <displayFormat>BR Filter - {00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BR filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>