default/objects/BR_filter__c/fields/BR_case__c.field-meta.xml
<CustomField>
    <fullName>BR_case__c</fullName>
    <label>BR case</label>
    <referenceTo>BR_case__c</referenceTo>
    <relationshipLabel>BR filters</relationshipLabel>
    <relationshipName>BR_filters</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>