default/objects/BR_filter__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>Condition</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Field_type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
                <label>=</label>
            </value>
            <value>
                <fullName>not_equals</fullName>
                <label>≠</label>
            </value>
            <value>
                <fullName>less_than</fullName>
                <label>&lt;</label>
            </value>
            <value>
                <fullName>greater_than</fullName>
                <label>&gt;</label>
            </value>
            <value>
                <fullName>less_than_or_equals</fullName>
                <label>⩽</label>
            </value>
            <value>
                <fullName>greater_than_or_equals</fullName>
                <label>⩾</label>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
            <value>
                <fullName>starts_with</fullName>
                <label>starts with</label>
            </value>
            <value>
                <fullName>ends_with</fullName>
                <label>ends with</label>
            </value>
            <value>
                <fullName>interval_including_left_right</fullName>
                <label>[ ; ]</label>
            </value>
            <value>
                <fullName>interval_including_right</fullName>
                <label>( ; ]</label>
            </value>
            <value>
                <fullName>interval_including_left</fullName>
                <label>[ ; )</label>
            </value>
            <value>
                <fullName>interval</fullName>
                <label>( ; )</label>
            </value>
            <value>
                <fullName>excludes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>