default/objects/BR_filter__c/fields/Field_type__c.field-meta.xml
<CustomField>
    <fullName>Field_type__c</fullName>
    <label>Field type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BOOLEAN</fullName>
                <label>Checkbox</label>
            </value>
            <value>
                <fullName>DATE</fullName>
                <label>Date</label>
            </value>
            <value>
                <fullName>DATETIME</fullName>
                <label>Date/Time</label>
            </value>
            <value>
                <fullName>TIME</fullName>
                <label>Time</label>
            </value>
            <value>
                <fullName>DOUBLE</fullName>
                <label>Number</label>
            </value>
            <value>
                <fullName>PICKLIST</fullName>
                <label>Picklist</label>
            </value>
            <value>
                <fullName>MULTIPICKLIST</fullName>
                <label>Multi picklist</label>
            </value>
            <value>
                <fullName>STRING</fullName>
                <label>Text</label>
            </value>
            <value>
                <fullName>TEXTAREA</fullName>
                <label>Text area</label>
            </value>
            <value>
                <fullName>REFERENCE</fullName>
                <label>Reference</label>
            </value>
            <value>
                <fullName>PHONE</fullName>
                <label>Phone</label>
            </value>
            <value>
                <fullName>ENCRYPTEDSTRING</fullName>
                <label>Encrypted text</label>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
                <label>Email</label>
            </value>
            <value>
                <fullName>ID</fullName>
                <label>Record ID</label>
            </value>
            <value>
                <fullName>PERCENT</fullName>
                <label>Percent</label>
            </value>
            <value>
                <fullName>CURRENCY</fullName>
                <label>Currency</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>