default/objects/BR_filter__c/fields/Field_value__c.field-meta.xml
<CustomField>
    <fullName>Field_value__c</fullName>
    <label>Field value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>