default/objects/BR_filter__c/fields/Filter_number__c.field-meta.xml
<CustomField>
    <fullName>Filter_number__c</fullName>
    <description>Number of the filter for filter logic in the case</description>
    <inlineHelpText>Number of the filter for filter logic in the case</inlineHelpText>
    <label>Filter Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>